--- a/templates/domain.html.jinja
+++ b/templates/domain.html.jinja
@@ -3,12 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="color-scheme" content="dark light">
   <title>{{domain}} | {{site_title}}</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
-  <div class="container">
+  <main class="container" role="main">
 
     <!-- Site Title -->
     <div class="row">
@@ -78,7 +79,7 @@
           {% endif %}
 
           {% if results.spf.record %}
-          <p>Record: <code>{{results.spf.record}}</code><br>all: <code> 
+          <p>Record: <code>{{results.spf.record}}</code><br>all: <code>
           {% if results.spf.parsed.redirect %}
           {{results.spf.parsed.redirect.parsed.all}}
           {% else %}
@@ -87,7 +88,7 @@
           </code></p>
           {% endif %}
 
-          {% if results.spf.dns_lookups %}
+          {% if results.spf.dns_lookups is not none %}
           <p>DNS lookups used: {{results.spf.dns_lookups}}/10<br>
             Void lookups: {{results.spf.dns_void_lookups}}/2
           </p>
@@ -95,14 +96,14 @@
 
           {% if "parsed" in results.spf %}
           {% for entry in results.spf.parsed.pass %}
-          {% if"%{" in entry.value %}
+          {% if "%{" in entry.value %}
           <div class="alert alert-info text-center" role="alert">
           <code>{{entry.mechanism}}:{{entry.value}}</code> uses SPF macros so a server (i.e., hosted SPF services) can dynamically indicate if an IP address should be accepted in SPF validation.
         </div>
           {% endif %}
           {% endfor %}
           {% for include in results.spf.parsed.include %}
-          {% if"%{" in include.domain %}
+          {% if "%{" in include.domain %}
           <div class="alert alert-info text-center" role="alert">
           <code>include:{{include.domain}}</code> uses SPF macros so a server (i.e., hosted SPF services) can dynamically indicate if an IP address should be accepted in SPF validation.
         </div>
@@ -113,19 +114,23 @@
           <p>The following table contains a list of DNS lookups used by each include, including the <code>include</code> lookup itself.</p>
           <div class="table-responsive">
             <table class="table table-bordered table-striped">
-              <tr>
-                <th scope="col">Domain</th>
-                <th scope="col">DNS lookups</th>
-              </tr>
+              <caption class="visually-hidden">SPF include DNS lookups</caption>
+              <thead>
+                <tr>
+                  <th scope="col">Domain</th>
+                  <th scope="col">DNS lookups</th>
+                </tr>
+              </thead>
+              <tbody>
               {% for include in results.spf.parsed.include %}
-              <tr>
-                <td>{{include.domain}}</td>
+                <tr>
+                  <td>{{include.domain}}</td>
                 {% if "%{" in include.domain %}
-                <td>{{include.dns_lookups}}</td>
+                  <td>{{include.dns_lookups}}</td>
                 {% else %}
-                <td>{{include.dns_lookups + 1}}</td>
+                  <td>{{include.dns_lookups + 1}}</td>
                 {% endif %}
-              </tr>
+                </tr>
               {% endfor %}
               {% if results.spf.parsed.redirect %}
                 {% for include in results.spf.parsed.redirect.parsed.include %}
@@ -135,6 +140,7 @@
                 </tr>
                 {% endfor %}
               {% endif %}
+              </tbody>
             </table>
           </div>
           {% endif %}
@@ -176,9 +182,16 @@
           {% if "tags" in results.dmarc %}
           <div class="table-responsive">
             <table class="table table-bordered table-striped">
-              <tr><th scope="col">Tag</th><th scope="col">Value</th></tr>
+             <caption class="visually-hidden">DMARC record tag values</caption>
+              <thead>
+                <tr>
+                  <th scope="col">Tag</th>
+                  <th scope="col">Value</th>
+                 </tr>
+                </thead>
+              <tbody>
               {% for tag, details in results.dmarc.tags.items() %}
-                {% if details.explicit and not tag == "v" %}
+                {% if details.explicit and tag != "v" %}
                 <tr>
                   <th scope="row">{{tag}}</th>
                   {% if tag in ["rua", "ruf"] %}
@@ -195,15 +208,14 @@
                 </tr>
                 {% endif %}
               {% endfor %}
+              </tbody>
             </table>
           </div>
           {% endif %}
         </div> <!-- End padded wrapper -->
       </div> <!-- End column -->
       <!-- BIMI -->
-     <div class="col-lg-2">
-    </div>
-      <div class="col-lg-8">
+      <div class="col-lg-8 offset-lg-2">
         <div class="p-3 pt-0">
           <div class="intro mb-3">
             <h4 class="text-center">BIMI</h4>
@@ -241,15 +253,23 @@
           {% endif %}
           <div class="table-responsive">
             <table class="table table-bordered table-striped">
-              <tr><th scope="col">Tag</th><th scope="col">Value</th></tr>
+              <caption class="visually-hidden">BIMI record tag values</caption>
+              <thead>
+              <tr>
+                <th scope="col">Tag</th>
+                <th scope="col">Value</th>
+              </tr>
+              </thead>
+              <tbody>
               {% for tag, details in results.bimi.tags.items() %}
-                {% if  not tag == "v" %}
-                <tr>
-                  <th scope="row">{{tag}}</th>
-                  <td>{{details.value}}</td>
-                </tr>
+                {% if tag != "v" %}
+                  <tr>
+                    <th scope="row">{{tag}}</th>
+                    <td>{{details.value}}</td>
+                  </tr>
                 {% endif %}
               {% endfor %}
+                </tbody>
             </table>
           </div>
           {% endif %}
@@ -269,12 +289,15 @@
           decoding="async"/>
           <div class="table-responsive">
             <table class="table table-bordered table-striped">
-            {% for key, value in results.bimi.image.items() %}
-            <tr>
-              <th scope="row">{{key}}</th>
-              <td>{{value}}</td>
-            </tr>
-            {% endfor %}
+              <caption class="visually-hidden">Image metadata</caption>
+                <tbody>
+              {% for key, value in results.bimi.image.items() %}
+              <tr>
+                <th scope="row">{{key}}</th>
+                <td>{{value}}</td>
+              </tr>
+              {% endfor %}
+              </tbody>
             </table>
           </div>
            {% endif %}
@@ -294,17 +317,22 @@
            <h6 class="text-center">Issuer</h6>
            <div class="table-responsive">
             <table class="table table-bordered table-striped">
+            <caption class="visually-hidden">Certificate issuer metadata</caption>
+            <tbody>
             {% for key, value in results.bimi.certificate.issuer.items() %}
             <tr>
               <th scope="row">{{key}}</th>
               <td>{{value}}</td>
             </tr>
             {% endfor %}
+            </tbody>
             </table>
            </div>
             <h6 class="text-center">Subject</h6>
            <div class="table-responsive">
             <table class="table table-bordered table-striped">
+            <caption class="visually-hidden">Certificate subject metadata</caption>
+            <tbody>
             {% for key, value in results.bimi.certificate.subject.items() %}
             <tr>
               <th scope="row">{{key}}</th>
@@ -315,6 +343,7 @@
               <th scope="row">logoTypeSHA256</th>
               <td>{{results.bimi.certificate.logotype_sha256}}</td>
             </tr>
+            </tbody>
           </table>
          </div>
            {% endif %}
@@ -347,6 +376,7 @@
           {% for host in results.mx.hosts %}
           <div class="table-responsive">
             <table class="table table-bordered table-striped">
+            <tbody>
               <tr>
                 <th scope="row">Preference</th>
                 <td>{{host.preference}}</td>
@@ -385,6 +415,7 @@
                 <td>{% if host.starttls %}True{% else %}False{% endif %}</td>
               </tr>
               {% endif %}
+            </tbody>
             </table>
           </div>
           {% if host.dnssec and host.tlsa %}
@@ -421,28 +452,31 @@
           {% endfor %}
           <div class="table-responsive">
             <table class="table table-bordered table-striped">
-              <tr>
-                <th scope="row">id</th>
-                <td>{{results.mta_sts.id}}</td>
-              </tr>
-              <tr>
-                <th scope="row">mode</th>
-                <td>{{results.mta_sts.policy.mode}}</td>
-              </tr>
-              <tr>
-                <th scope="row">max age</th>
-                <td>{{results.mta_sts.policy.max_age}}</td>
-              </tr>
-              <tr>
-                <th scope="row">mx</th>
-                <td>
-                  <ul class="list-unstyled">
-                  {% for host in results.mta_sts.policy.mx %}
-                  <li>{{host}}</li>
-                  {% endfor %}
-                  </ul>
-                </td>
-              </tr>
+            <caption class="visually-hidden">MTA-STS configuration</caption>
+              <tbody>
+                <tr>
+                  <th scope="row">id</th>
+                  <td>{{results.mta_sts.id}}</td>
+                </tr>
+                <tr>
+                  <th scope="row">mode</th>
+                  <td>{{results.mta_sts.policy.mode}}</td>
+                </tr>
+                <tr>
+                  <th scope="row">max age</th>
+                  <td>{{results.mta_sts.policy.max_age}}</td>
+                </tr>
+                <tr>
+                  <th scope="row">mx</th>
+                  <td>
+                    <ul class="list-unstyled">
+                    {% for host in results.mta_sts.policy.mx %}
+                    <li>{{host}}</li>
+                    {% endfor %}
+                    </ul>
+                  </td>
+                </tr>
+              </tbody>
             </table>
           </div>
           {% endif %}
@@ -472,9 +506,16 @@
           {% endfor %}
           <div class="table-responsive">
             <table class="table table-bordered table-striped">
-              <tr><th scope="col">Tag</th><th scope="col">Value</th></tr>
+            <caption class="visually-hidden">SMTP TLS reporting tags</caption>
+              <thead>
+                <tr>
+                  <th scope="col">Tag</th>
+                  <th scope="col">Value</th>
+                </tr>
+              </thead>
+              <tbody>
               {% for tag, details in results.smtp_tls_reporting.tags.items() %}
-                {% if not tag == "v" %}
+                {% if tag != "v" %}
                 <tr>
                   <th scope="row">{{tag}}</th>
                   {% if tag in ["rua"] %}
@@ -491,6 +532,7 @@
                 </tr>
                 {% endif %}
                 {% endfor %}
+              </tbody>
             </table>
           </div>
           {% endif %}
@@ -520,12 +562,15 @@
           <p class="text-center">Record: <code>{{results.soa.record}}</code></p>
           <div class="table-responsive">
             <table class="table table-bordered table-striped">
+            <caption class="visually-hidden">SOA record values</caption>
+            <tbody>
               {% for key, value in results.soa["values"].items() %}
               <tr>
                 <th scope="row">{{key.capitalize().replace("_", " ")}}</th>
                 <td>{{value}}</td>
               </tr>
               {% endfor %}
+              </tbody>
             </table>
           </div>
         {% endif %}
@@ -548,7 +593,7 @@
       </div>
     </div> <!-- End row -->
 
-  </div> <!-- End container -->
+  </main> <!-- End main container -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
           integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
@@ -579,6 +624,7 @@
         };
       }
 
+      window.addEventListener('DOMContentLoaded', setIntroHeights);
       window.addEventListener('load', setIntroHeights);
       window.addEventListener('resize', debounce(setIntroHeights, 150));
     }());
