--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -4,13 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="color-scheme" content="dark light">
   <title>{{site_title}}</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 
 <body>
-  <main>
+  <main role="main">
     <div class="px-4 py-5 text-center">
       <h1><a href="/" class="text-decoration-none text-reset">{{site_title}}</a></h1>
       <p class="lead">
