--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -31,6 +31,9 @@
       </div>
     </div>
   </main>
+  <footer class="mt-5 pt-4 border-top text-center small text-muted">
+   <p class="mb-1"><span>&copy; <a href="{{ site_author_url }}">{{ site_author }}</a></span></p>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     crossorigin="anonymous"></script>
