--- a/templates/domain-does-not-exist.html.jinja
+++ b/templates/domain-does-not-exist.html.jinja
@@ -1,30 +1,8 @@
-<!doctype html>
-<html lang="en" data-bs-theme="dark">
+{% extends "common.html.jinja"%}
+{% block title %}{{ domain }} does not exist{% endblock %}
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="color-scheme" content="dark light">
-  <title>{{ domain }} does not exist | {{ site_title }}</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <style>
-  </style>
-</head>
-
-<body>
-  <main class="container" role="main">
-    <h1><a href="/" class="text-decoration-none text-reset">{{ site_title }}</a></h1>
+{% block content %}
     <div class="row justify-content-center">
       <h2 class="text-center">{{ domain }} does not exist</h2>
     </div>
-  </main>
-  <footer class="mt-5 pt-4 border-top text-center small text-muted">
-   <p class="mb-1"><span>&copy; <a href="{{ site_author_url }}">{{ site_author }}</a></span></p>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-    crossorigin="anonymous"></script>
-</body>
-
-</html>
+{% endblock %}
