--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -1,17 +1,6 @@
-<!doctype html>
-<html lang="en" data-bs-theme="dark">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="color-scheme" content="dark light">
-  <title>{{ site_title }}</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-</head>
-
-<body>
-  <main role="main">
+{% extends "base.html.jinja" %}
+{% block title %}Home{% endblock %}
+{%block content %}
     <div class="px-4 py-5 text-center">
       <h1><a href="/" class="text-decoration-none text-reset">{{ site_title }}</a></h1>
       <p class="lead">
@@ -19,7 +8,7 @@
         <a href="https://domainaware.github.io/checkdmarc">checkdmarc</a>.
       </p>
     </div>
-    <div class="container">
+    <main class="container" role="main">
       <div class="row justify-content-center">
         <div class="col-sm-4">
           <form method="post" class="input-group">
@@ -29,14 +18,5 @@
           </form>
         </div>
       </div>
-    </div>
-  </main>
-  <footer class="mt-5 pt-4 border-top text-center small text-muted">
-   <p class="mb-1"><span>&copy; <a href="{{ site_author_url }}">{{ site_author }}</a></span></p>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-    crossorigin="anonymous"></script>
-</body>
-
-</html>
+    </main>
+{% endblock %}
