Fix duplicated site title

--- a/templates/domain.html.jinja
+++ b/templates/domain.html.jinja
@@ -1,7 +1,8 @@
-{% extends "common.html.jinja" %}
+{% extends "base.html.jinja" %}
 {% block title %}{{ domain }}{% endblock %}
 
 {% block content %}
+  <main class="content" role="main">
     <!-- Site Title -->
     <div class="row">
       <div class="col-12">
