--- a/templates/domain.html.jinja
+++ b/templates/domain.html.jinja
@@ -2,7 +2,7 @@
 {% block title %}{{ domain }}{% endblock %}
 
 {% block content %}
-  <main class="content" role="main">
+  <main class="container" role="main">
     <!-- Site Title -->
     <div class="row">
       <div class="col-12">
