Make BIMIs own row to fix alignment issues

--- a/templates/domain.html.jinja
+++ b/templates/domain.html.jinja
@@ -217,7 +217,9 @@
           {% endif %}
         </div> <!-- End padded wrapper -->
       </div> <!-- End column -->
+    </div> <!--End auth row-->
       <!-- BIMI -->
+      <div class="row">
       <div class="col-lg-8 offset-lg-2">
         <div class="p-3 pt-0">
           <div class="intro mb-3">
@@ -356,7 +358,7 @@
 
         </div> <!-- End padded wrapper -->
       </div> <!-- End column -->
-    </div> <!-- End auth row -->
+    </div> <!-- End BIMI row -->
 
     <!-- Email Infrastructure -->
     <div id="email-infra-row" class="row">
