--- a/templates/domain-does-not-exist.html.jinja
+++ b/templates/domain-does-not-exist.html.jinja
@@ -1,4 +1,4 @@
-{% extends "common.html.jinja"%}
+{% extends "page.html.jinja"%}
 {% block title %}{{ domain }} does not exist{% endblock %}
 
 {% block content %}
