--- a/templates/base.html.jinja
+++ b/templates/base.html.jinja
@@ -4,7 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="color-scheme" content="dark light">
-  <title>{% block title %}{% endblock %} | {{ site_title }}</title>
+  <title>{{ page_title or "Free Email Security Test – SPF, DMARC & More | {{site_title}}" }}</title>
+  <meta name="description" content="{{ meta_description or 'Instantly test SPF, DMARC, MTA-STS, TLS-RPT, DNSSEC, and BIMI for your domain with free, detailed email-security guidance.' }}">
+  <link rel="canonical" href="{{ request.url }}" />
   {% block head %}{%endblock%}
   <link rel="icon" href="{{ url_for('static', filename='icons/favicon.svg') }}" type="image/svg+xml">
   <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='icons/favicon-16x16.png') }}">
