--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -1,8 +1,7 @@
 {% extends "base.html.jinja" %}
-{% block title %}Home{% endblock %}
 {%block content %}
     <div class="px-4 py-5 text-center">
-      <h1><a href="/" class="text-decoration-none text-reset">{{ site_title }}</a></h1>
+      <h1><a href="/" class="text-decoration-none text-reset">Free SPF & DMARC Checker | {{ site_title }}</a></h1>
       <p class="lead">
         Check a domain for DNSSEC, SPF, DMARC, and more. Powered by
         <a href="https://domainaware.github.io/checkdmarc">checkdmarc</a>.
