--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -1,9 +1,9 @@
 {% extends "base.html.jinja" %}
 {%block content %}
     <div class="px-4 py-5 text-center">
-      <h1><a href="/" class="text-decoration-none text-reset">Free SPF & DMARC Checker | {{ site_title }}</a></h1>
+      <h1><a href="/" class="text-decoration-none text-reset"> {{ site_title }}</a></h1>
       <p class="lead">
-        Check a domain for DNSSEC, SPF, DMARC, and more. Powered by
+        Check a domain for DNSSEC, SPF, DMARC, and more for free. Powered by
         <a href="https://domainaware.github.io/checkdmarc">checkdmarc</a>.
       </p>
     </div>
