--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -1,4 +1,5 @@
 {% extends "base.html.jinja" %}
+{% set title = "Free Email Security Test – SPF, DMARC & More"%}
 {%block content %}
     <div class="px-4 py-5 text-center">
       <h1><a href="/" class="text-decoration-none text-reset"> {{ site_title }}</a></h1>
