--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -4,8 +4,8 @@
     <div class="px-4 py-5 text-center">
       <h1><a href="/" class="text-decoration-none text-reset"> {{ site_title }}</a></h1>
       <p class="lead">
-        Check a domain for DNSSEC, SPF, DMARC, and more for free. Powered by
-        <a href="https://domainaware.github.io/checkdmarc">checkdmarc</a>.
+        Check a domain for DNSSEC, SPF, DMARC, and more for free. <br>
+        No sales pitch. Powered by <a href="https://domainaware.github.io/checkdmarc">checkdmarc</a>.
       </p>
     </div>
     <main class="container" role="main">
