--- a/templates/domain.html.jinja
+++ b/templates/domain.html.jinja
@@ -510,8 +510,8 @@
       <div class="col-lg-4">
         <div class="p-3 pt-0">
           <div class="intro mb-3">
-            <h4 class="text-center">SMTP TLS Reporting (TLS-RPT)</h4>
-            <p>SMTP TLS Reporting is a reporting mechanism and format by which sending systems can share statistics and
+            <h4 class="text-center">SMTP TLS Reporting)</h4>
+            <p>SMTP TLS Reporting (TLS RPT) is a reporting mechanism and format by which sending systems can share statistics and
               specific information about potential failures to establish encrypted channels with recipient domains.
               Recipient domains can then use this information to both detect potential attacks and diagnose
               unintentional misconfigurations.</p>
