Tweak titles for SEO

--- a/templates/domain.html.jinja
+++ b/templates/domain.html.jinja
@@ -1,5 +1,5 @@
 {% extends "base.html.jinja" %}
-{% set title = domain %}
+{% set title = domain ~ " - SPF, DMARC & more" %}
 {% block head %}
 {% if not is_sample_domain %}
     <meta name="robots" content="noindex,follow">
