Add meta descriptions

--- a/templates/domain.html.jinja
+++ b/templates/domain.html.jinja
@@ -4,6 +4,8 @@
 {% if not is_sample_domain %}
     <meta name="robots" content="noindex,follow">
 {% endif %}
+ <meta name="description"
+        content="Check SPF, DMARC, MTA-STS, TLS-RPT, DNSSEC, and BIMI for  {{ domain }}. Get instant results with clear, RFC-based guidance — free from Domain Checkup.">
 {% endblock %}
 {% block content %}
   <main class="container" role="main">
