--- a/templates/domain-does-not-exist.html.jinja
+++ b/templates/domain-does-not-exist.html.jinja
@@ -1,5 +1,8 @@
 {% extends "page.html.jinja"%}
 {% set title = domain ~ "does not exist" %}
+{% block meta_description %}The domain {{ domain }} does not exist.{% endblock %}
+{% block og_title %}Domain does not exist{% endblock %}
+{% block og_description %}The domain {{ domain }} does not exist.{% endblock %}
 
 {% block content %}
     <div class="row justify-content-center">
