--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -1,25 +1,22 @@
 {% extends "base.html.jinja" %}
-{% set title = "Check SPF, DMARC & more for free | Domain Checkup" %}
-{% block head %}
-    <meta name="description" content="Instantly test SPF, DMARC, MTA-STS, TLS-RPT, DNSSEC, and BIMI for your domain with free, detailed guidance.">
-{% endblock %}
+{% set title = "Check SPF, DMARC & more for free" %}
 {%block content %}
-    <div class="px-4 py-5 text-center">
-      <h1><a href="/" class="text-decoration-none text-reset"> {{ site_title }}</a></h1>
-      <p class="lead">
-        Check a domain for DNSSEC, SPF, DMARC, and more for free. <br>
-        No sales pitch. Powered by <a href="https://domainaware.github.io/checkdmarc">checkdmarc</a>.
-      </p>
+<div class="px-4 py-5 text-center">
+  <h1><a href="/" class="text-decoration-none text-reset"> {{ site_name }}</a></h1>
+  <p class="lead">
+    Check a domain for DNSSEC, SPF, DMARC, and more for free. <br>
+    No sales pitch. Powered by <a href="https://domainaware.github.io/checkdmarc">checkdmarc</a>.
+  </p>
+</div>
+<main class="container" role="main">
+  <div class="row justify-content-center">
+    <div class="col-sm-4">
+      <form method="post" class="input-group">
+        <input type="text" name="domain" class="form-control form-control-lg" id="domain" required
+          placeholder="example.com">
+        <button type="submit" class="btn btn-large btn-primary">Submit</button>
+      </form>
     </div>
-    <main class="container" role="main">
-      <div class="row justify-content-center">
-        <div class="col-sm-4">
-          <form method="post" class="input-group">
-            <input type="text" name="domain" class="form-control form-control-lg" id="domain" required
-              placeholder="example.com">
-            <button type="submit" class="btn btn-large btn-primary">Submit</button>
-          </form>
-        </div>
-      </div>
-    </main>
+  </div>
+</main>
 {% endblock %}
