--- a/templates/base.html.jinja
+++ b/templates/base.html.jinja
@@ -6,22 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="color-scheme" content="dark light">
   <title>{{ (title ~ " | " if title else "") ~ site_name }}</title>
-  <meta name="description"
-    content="{% block meta_description %}Instantly test SPF, DMARC, MTA-STS, TLS-RPT, DNSSEC, and BIMI for your domain with free, detailed guidance.{% endblock %}">
-
-  {# Open Graph #}
+  <meta name="description"content="{% block meta_description %}Instantly test SPF, DMARC, MTA-STS, TLS-RPT, DNSSEC, and BIMI for your domain with free, detailed guidance.{% endblock %}">
   <meta property="og:title" content="{% block og_title %}{{ site_name }} | Free DNS security analysis{% endblock %}" />
-  <meta property="og:description"
-    content="{% block og_description %}Check your domain's email security in seconds for free with no sales pitch. 🚀 SPF & DMARC, and more made easy.{% endblock %}" />
+  <meta property="og:description" content="{% block og_description %}Check your domain's email security in seconds for free with no sales pitch. 🚀 SPF & DMARC, and more made easy.{% endblock %}" />
   <meta property="og:type" content="{% block og_type %}website{% endblock %}" />
   <meta property="og:url" content="{{ canonical_url() }}" />
   <meta property="og:image" content="{% block og_image %}{{ url_for('static', filename='card.webp') }}{% endblock %}" />
   <meta property="og:image:alt" content="{% block og_image_alt %}A card describing the features of {{ site_name }}{% endblock %}" />
   <meta property="og:site_name" content="{{ site_name }}" />
-
-  {# Twitter #}
   <meta name="twitter:card" content="summary_large_image" />
-
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
